# MiniLD53

./: .gitignore  CMakeLists.txt  README.md  notes.md
assets/: fouf.xcf  tiles_futur.xcf  tiles_present.xcf  warp.xcf
assets/characters/: mob_boss.xcf  scientist.xcf
cmake/: version.cmake
proposal/: file_format.txt
src/: Actors.cpp  Actors.h  CMakeLists.txt  FontManager.cpp  FontManager.hpp  Game.cpp  Game.hpp  Hero.cpp  Hero.h  InputHandler.hpp  MainMenuScene.cpp  MainMenuScene.hpp  PastHero.cpp  PastHero.h  PresentHero.cpp  PresentHero.h  Scene.cpp  Scene.hpp  TextureManager.cpp  TextureManager.hpp  Version.hpp.in  main.cpp  map.cpp  map.hpp  version.hpp.in
